data/derived/comb/progs/unify/prog4015.ml.out
Characters 56-68:
  let x = reverseInt n/10 
          ^^^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
